syntax = "proto3";

package exocore.core;

message Node {
    bytes id = 1;
    bytes public_key = 2;
    repeated string addresses = 3;
}

